--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
     <div id="cabecera">
       HyperBlog
       <span id="tagline">
-        Tu blog de confianza
+        Tu blog de maestro
       </span>
     </div>
     <div id="post">
@@ -22,6 +22,7 @@
       <p>Los blogs son la mejor forma de compartir información y tus ideas.
         Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora
       </p>
+      <p>Subscribete y dale Like</p>
     </div>
   </div>
 
