--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
 <body>
   <div id="container">
     <div id="cabecera">
+      <img id="logo" src="images/blog.png" alt="imagen de logo" />
       HyperBlog
       <span id="tagline">
         Tu blog de maestro
