--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
       <img id="logo" src="images/blog.png" alt="imagen de logo" />
       HyperBlog
       <span id="tagline">
-        Tu blog de maestro
+        Tu blog maestro de confianza 
       </span>
     </div>
     <div id="post">
